--- a/README.org
+++ b/README.org
@@ -1,17 +1,18 @@
 Group
 
-=group= is a small c++11 template library for doing differential
+~group~ is a small c++11 template library for doing differential
 geometry in Lie groups. It can be used to automatically compute
 complicated derivatives/pullbacks, for instance when dealing with
 robot kinematics.
 
-=group= tries to provide a high degree of flexibility by providing a
+~group~ tries to provide a high degree of flexibility by providing a
 collection of small, atomic functions that can be chained together to
 form more complex functions, at compile time.
 
-You can use your custom data types with =group= by implementing a few
-trait classes describing Euclidean and Lie group operations. Since
-most 
+You can use your custom data types with ~group~ by implementing a few
+trait classes describing /Euclidean/ and /Lie group/ operations. Since
+most of the functions in ~group~ only use these interfaces, you will
+be able to use them right away in your code.
 
 * TODO Examples
 
