--- a/README.org
+++ b/README.org
@@ -22,7 +22,7 @@ be able to use them right away in your code. For instance, you can use
 
 Here is a small example:
 
-#+begin_src :cpp
+```cpp
 
  // alias Eigen vectors
  typedef Eigen::Vector3d vec3;
@@ -41,8 +41,7 @@ Here is a small example:
 
  // real variable alpha, equals 3
  RR alpha = f(1.0);
-
-#+end_src
+```
 
 * TODO Usage
 
