--- a/README.org
+++ b/README.org
@@ -22,7 +22,7 @@ be able to use them right away in your code. For instance, you can use
 
 Here is a small example:
 
-#+begin_src c++
+#+begin_example
  // alias Eigen vectors
  typedef Eigen::Vector3d vec3;
   
@@ -40,7 +40,7 @@ Here is a small example:
 
  // real variable alpha, equals 3
  RR alpha = f(1.0);
-#+end_src
+#+end_example
 
 * TODO Usage
 
