--- a/README.org
+++ b/README.org
@@ -124,8 +124,8 @@ algorithms that work for /any/ Euclidean space:
 This might seems a little overkill for now, but the same mechanism
 applies for Lie groups as well, and enables us to write *one* single
 spline interpolation algorithm that works for *any* classical Lie
-group. Yes, even for that funny Lie group \[ G = SE(3) \times SO(3)
-\times SL(2) \times \mathbb{R}^10 \] should you want to do it.
+group. Yes, even for that funny Lie group \( G = SE(3) \times SO(3)
+\times SL(2) \times \mathbb{R}^10 \) should you want to do it.
 
 * TODO Usage
 
