--- a/README.org
+++ b/README.org
@@ -1,10 +1,26 @@
 
 #+BEGIN_EXAMPLE
-taiste
+// direct product type
+typedef std::tuple<vec3, vec> my_type;
+ 
+// Euclidean space structure for my_type: we indicate that dynamic-sized
+// vectors should be 10-dimensional				
+euclid::space<my_type> my_info( vec3_info, vec_info );
+
+// squared norm: my_type -> RR
+auto g = func::norm2<my_type>(info);
 #+END_EXAMPLE
 
 #+BEGIN_SRC c++
-taiste
+// direct product type
+typedef std::tuple<vec3, vec> my_type;
+ 
+// Euclidean space structure for my_type: we indicate that dynamic-sized
+// vectors should be 10-dimensional				
+euclid::space<my_type> my_info( vec3_info, vec_info );
+
+// squared norm: my_type -> RR
+auto g = func::norm2<my_type>(info);
 #+END_SRC
 
 
