--- a/README.org
+++ b/README.org
@@ -1,5 +1,5 @@
 
-#+BEGIN_EXAMPLE
+#+BEGIN_SRC c++
 // direct product type
 typedef std::tuple<vec3, vec> my_type;
  
@@ -9,9 +9,9 @@ euclid::space<my_type> my_info( vec3_info, vec_info );
 
 // squared norm: my_type -> RR
 auto g = func::norm2<my_type>(info);
-#+END_EXAMPLE
+#+END_SRC
 
-#+BEGIN_SRC c++
+#+BEGIN_SRC cpp
 // direct product type
 typedef std::tuple<vec3, vec> my_type;
  
