--- a/TODO.org
+++ b/TODO.org
@@ -3,12 +3,11 @@
 ** is it possible to have a vector of functions ?
 
 
-* euclid functions
+* constants
 * operators
 * Lie group functions
 
-
-* tuple functions (tuple, join, partial )
+* tuple functions (group, partial )
 
 * tuple Lie group structure 
 
