--- a/TODO.org
+++ b/TODO.org
@@ -10,8 +10,7 @@
 * machine precision
 * operators
 * Lie group functions
-** operations, translations
-
+** inverse
 
 * tuple functions (partial)
 * harmonize make_ ... and friends
@@ -22,4 +21,5 @@
 
 * rigid body kinematics
 * splines 
+  
   
