--- a/TODO.org
+++ b/TODO.org
@@ -1,20 +1,25 @@
 
 
 * machine precision ?
+  std::numeric_limits<double>::epsilon
 
-* operators
+* operators for functions
 
 * Lie group
-  - product
+  - product map
+    
+* Lie brackets/cobrackets
 
 * tuple
   - partial
-
+    
 * harmonize make_ ... and friends
 
 * SO3
   - exp/log
-  - so3, so3T
+  - so3, so3T ?
+
+* static_size in euclidean spaces, coords_type
     
 * dual quaternions (?), rigid transforms
 
@@ -32,12 +37,17 @@
 * rigid body kinematics
   
 * splines 
-
+  
 * lambdas ?
 
 * get rid of the nasty ::self member type ?
 ** used to get nested push::push types right  
   
+
 * modules ?
+  to include parts of the lib directly
 
 * lua interface ?
+* rename to  math0x
+* minres
+
