--- a/README.org
+++ b/README.org
@@ -1,22 +1,22 @@
 *Warning:* This is a complete work in progress, nowhere near a
 releasable state.
 
-*group* is a small c++11 template library for doing differential
+*math0x* is a small c++11 template library for doing differential
 geometry in Lie groups. It can be used to automatically compute
 complicated derivatives/pullbacks, for instance when dealing with
 robot kinematics.
 
-*group* tries to provide a high degree of flexibility by providing a
+*math0x* tries to provide a high degree of flexibility by providing a
 collection of small, atomic functions that can be chained together to
 form more complex functions. This composition happens at compile time,
 thus the compiler will +beg for mercy+ do its best to produce
 efficient code.
 
-You can use your custom data types with *group* by implementing a few
+You can use your custom data types with *math0x* by implementing a few
 /trait/ classes describing Euclidean and Lie group operations. Since
-most of the functions in ~group~ only use these interfaces, you will
+most of the functions in ~math0x~ only use these interfaces, you will
 be able to use them right away in your code. For instance, you can use
-*Eigen* vectors with *group*.
+*Eigen* vectors with *math0x*.
 
 * TODO Examples
 
@@ -140,7 +140,7 @@ struct my_algo {
 This might seems a little overkill for now, but the same mechanism
 applies for Lie groups as well, and enables us to write *one* single
 spline interpolation algorithm that works for *any* classical Lie
-group. Yes, even for that funny Lie group 
+group. Yes, even for that funny Lie group:
 
 : \[ G = SE(3) \times SO(3) \times SL(2) \times \mathbb{R}^10 \]
 	
