added some move ctor to func::comp

--- a/TODO.org
+++ b/TODO.org
@@ -7,6 +7,10 @@
 	- maybe add groups.h, funcs.h, algos.h, ... ?
 		
 * Functions
+** tangent map
+	 - df(q, v) = df(q)(v)
+	 - (and push/pull ?)
+
 ** optimize func::any copies ?
 	 
 ** harmonize make_ ... and friends
